[package]
name = "ping"
version = "0.1.0"
authors = [ "Wink Saville <wink@saville.com" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
futures = "0.3.21"
libp2p = "0.44.0"
